ECMS-3905 In ECM Admin,panel are not correcly aligned in french Fix description: - Set width = 260px for Admin left panel - In case text so long, set overflow=hidden for it and set title

--- a/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/MacStylesheet.css
+++ b/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/MacStylesheet.css
@@ -737,7 +737,7 @@
 }
 
 .UIECMAdminPortlet .ECMAdminPanel {
-  height: 100%; width: 250px;
+  height: 100%; width: 260px;
   overflow: auto; 
   float: left; /* orientation=lt */
   float: right; /* orientation=rt */
