--- a/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/VistaStylesheet.css
+++ b/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/VistaStylesheet.css
@@ -728,11 +728,11 @@
 }
 
 .UIECMAdminPortlet .ECMAdminPanel {
-  height: 100%; width: 250px;
+  height: 100%; width: 260px;
   overflow: auto; 
   float: left; /* orientation=lt */
   float: right; /* orientation=rt */
-}
+
 .UIECMAdminPortlet .UIResizableBlock .ECMLayoutFloat{
 	float: left; /* orientation=lt */
 	float: right; /* orientation=rt */
